Saving source type of the view

--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -32,7 +32,8 @@
   };
   var globals = {
     enums: {
-      ScheduleType: {[ ScheduleType|json|safe ]}
+      ScheduleType: {[ ScheduleType|json|safe ]},
+      ViewSourceType: {[ ViewSourceType|json|safe ]}
     }
   };
 </script>
