--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -64,12 +64,12 @@
       </div>
       <div class="col-md-2 col-xs-6">
         <div class="form-group">
-          <button class="btn btn-default" style="margin-top: 24px;"><i class="fa fa-search" style="margin-right: 5px;"></i>{{ i18n.__('Advanced') }}</button>
+          <button class="btn btn-default" style="margin-top: 24px;" ng-click="showHideAdvancedFilter()" ng-show="extra.advancedFilters.length > 0"><i class="fa fa-search" style="margin-right: 5px;"></i>{{ i18n.__('Advanced') }}</button>
         </div>
       </div>
       <div class="col-md-2 col-xs-6 terrama2-nopadding-box" ng-show="linkToAdd">
         <div class="form-group">
-          <button ng-show="extra.service && extra.service.hasServiceOffline() && model.length > 0"
+          <button ng-show="extra.service && extra.service.hasServiceOffline() && advancedFilterModel.length > 0"
                   class="btn btn-primary"
                   ng-disabled="extra.service.starting"
                   ng-click="extra.service.startAll()"
@@ -80,7 +80,7 @@
                   <i class="fa fa-magic" style="margin-right: 5px;"></i>
                   {{ i18n.__('Start all') }}
           </button>
-          <button ng-show="extra.service && !extra.service.hasServiceOffline() && model.length > 0"
+          <button ng-show="extra.service && !extra.service.hasServiceOffline() && advancedFilterModel.length > 0"
                   class="btn btn-danger"
                   ng-disabled="extra.service.stoping"
                   ng-click="extra.service.stopAll()"
@@ -115,6 +115,18 @@
         </div>
       </div>
     </div>
+
+    <div class="col-md-12" style="margin: 0 0 10px 5px;" ng-show="showAdvancedFilter && extra.advancedFilters.length > 0">
+      <div class="col-md-12 col-xs-12">
+        <div class="col-md-1" ng-repeat="advancedFilter in extra.advancedFilters">
+          <div class="form-group">
+            <div class="checkbox">
+              <span style="font-weight: 700;"><input type="checkbox" ng-model="advancedFilter.checked" ng-click="executeAdvancedFilter()"/> {{ i18n.__(advancedFilter.name) }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="col-md-12 col-xs-12">
@@ -122,14 +134,14 @@
       <tbody id="searchList">
         <!-- header -->
         <tr style="font-weight: bold;">
-          <td ng-show="isFunction(icon()) && model.length > 0"></td>
+          <td ng-show="isFunction(icon()) && advancedFilterModel.length > 0"></td>
           <td ng-repeat="field in displayFields">{{ i18n.__(field) }}</td>
           <td ng-if="extra.service"></td>
           <td ng-if="extra.service">Status</td>
           <td ng-if="extra.export"></td>
           <td ng-if="isFunction(remove)">
         </tr>
-        <tr ng-repeat="element in filteredModel = (model | filter:searchInput) | pagingToolLimit: 10 | orderBy: orderElementby track by $index">
+        <tr ng-repeat="element in filteredModel = (advancedFilterModel | filter:searchInput) | pagingToolLimit: 10 | orderBy: orderElementby track by $index">
           <td ng-show="isFunction(icon())" style="width: 50px;">
             <img style="margin-left: 5px;" ng-if="iconProperties.type === 'img'" ng-src="{{ icon()(element) }}" alt="" width="{{ width }}" height="{{ height }}"/>
             <span ng-if="iconProperties.type === 'icon'" class="label">
