--- a/webapp/public/javascripts/angular/table/templates/table.html
+++ b/webapp/public/javascripts/angular/table/templates/table.html
@@ -69,7 +69,7 @@
       </div>
       <div class="col-md-2 col-xs-6 terrama2-nopadding-box" ng-show="linkToAdd">
         <div class="form-group">
-          <button ng-show="extra.service && extra.service.hasServiceOffline() && advancedFilterModel.length > 0"
+          <button ng-show="extra.service && extra.service.hasServiceOffline() && model.length > 0"
                   class="btn btn-primary"
                   ng-disabled="extra.service.starting"
                   ng-click="extra.service.startAll()"
@@ -80,7 +80,7 @@
                   <i class="fa fa-magic" style="margin-right: 5px;"></i>
                   {{ i18n.__('Start all') }}
           </button>
-          <button ng-show="extra.service && !extra.service.hasServiceOffline() && advancedFilterModel.length > 0"
+          <button ng-show="extra.service && !extra.service.hasServiceOffline() && model.length > 0"
                   class="btn btn-danger"
                   ng-disabled="extra.service.stoping"
                   ng-click="extra.service.stopAll()"
@@ -134,14 +134,14 @@
       <tbody id="searchList">
         <!-- header -->
         <tr style="font-weight: bold;">
-          <td ng-show="isFunction(icon()) && advancedFilterModel.length > 0"></td>
+          <td ng-show="isFunction(icon()) && model.length > 0"></td>
           <td ng-repeat="field in displayFields">{{ i18n.__(field) }}</td>
           <td ng-if="extra.service"></td>
           <td ng-if="extra.service">Status</td>
           <td ng-if="extra.export"></td>
           <td ng-if="isFunction(remove)">
         </tr>
-        <tr ng-repeat="element in filteredModel = (advancedFilterModel | filter:searchInput) | pagingToolLimit: 10 | orderBy: orderElementby track by $index">
+        <tr ng-repeat="element in filteredModel = (model | filter:searchInput | filter:showInTableFilter) | pagingToolLimit: 10 | orderBy: orderElementby track by $index">
           <td ng-show="isFunction(icon())" style="width: 50px;">
             <img style="margin-left: 5px;" ng-if="iconProperties.type === 'img'" ng-src="{{ icon()(element) }}" alt="" width="{{ width }}" height="{{ height }}"/>
             <span ng-if="iconProperties.type === 'icon'" class="label">
