improving advanced filter

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -257,7 +257,7 @@
     BASE_URL = "{[ BASE_URL ]}";
   </script>
 
-  <script type="text/javascript" src="{[ BASE_URL ]}dist/terrama2-webapp.min.js"></script>
+  <script type="text/javascript" src="{[ BASE_URL ]}dist/terrama2-webapp.js"></script>
 
 </body>
 </html>
