Fixed alert status, fix save and run of alert

--- a/webapp/views/configuration/status.html
+++ b/webapp/views/configuration/status.html
@@ -19,6 +19,7 @@
     collectors: {[ collectors|json|safe ]} || {},
     analysis: {[ analysis|json|safe ]} || {},
     views: {[ views|json|safe ]} || {},
+    alerts: {[ alerts|json|safe ]} || {},
     parameters: {[ parameters|json|safe ]}
   }
 </script>
