--- a/webmonitor/views/layout.html
+++ b/webmonitor/views/layout.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="{[ BASE_URL ]}AdminLTE/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" href="{[ BASE_URL ]}AdminLTE/dist/css/skins/skin-black.min.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}ol3/ol.css">
+    <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}TerraMA2WebComponents.min.css">
     <link rel="stylesheet" href="{[ BASE_URL ]}stylesheets/style.css">
     {% block styles %}{% endblock %}
     <style>
