creating attributes table

--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -34,6 +34,40 @@
             <button type="button"><i class="fa fa-info"></i></button>
         </div>
     </div>
+    <div id="table-div">
+        <div>
+            <span>Layers:</span>
+            <select class="form-control">
+                <option>Teste:123</option>
+                <option>Teste:123</option>
+                <option>Teste:123</option>
+            </select>
+            <br/>
+            <table class="table table-bordered table-striped">
+                <tbody>
+                    <tr>
+                        <th style="width: 10px">#</th>
+                        <th>Task</th>
+                        <th>Progress</th>
+                        <th style="width: 40px">Label</th>
+                    </tr>
+                    <tr>
+                        <td>1.</td>
+                        <td>Update software</td>
+                        <td>lala</td>
+                        <td><span class="badge bg-red">55%</span></td>
+                    </tr>
+                </tbody>
+            </table>
+            <ul class="pagination pagination-sm no-margin pull-right">
+                <li><a href="#">«</a></li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">»</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 <!-- Alert message -->
