--- a/webmonitor/public/stylesheets/style.css
+++ b/webmonitor/public/stylesheets/style.css
@@ -488,3 +488,36 @@
 .cursor-pointer { cursor: pointer !important; }
 
 .ol-zoom, .ol-zoom:hover { background-color: rgba(0, 0, 0, 0.4) !important; }
+
+#table-div {
+  position: absolute;
+  background-color: rgba(255,255,255,0.6);
+  width: 100%;
+  height: 400px;
+  bottom: 0;
+  z-index: 9999;
+}
+
+#table-div > div {
+   margin: 20px;
+   padding: 10px 10px 40px 10px;
+   background-color: white;
+   border-radius: 5px;
+   height: 90%;
+}
+
+#table-div > div > ul.pagination {
+   bottom: 30px;
+   position: absolute;
+   right: 30px;
+}
+
+#table-div > div > select {
+  width: 200px;
+}
+
+#table-div > div > span {
+  font-size: 18px;
+  float: left;
+  margin: 4px 15px 0 0;
+}
