--- a/webapp/views/configuration/alerts.html
+++ b/webapp/views/configuration/alerts.html
@@ -38,6 +38,7 @@
                       icon-properties="ctrl.iconProperties"
                       link-to-add="ctrl.linkToAdd"
                       remove="ctrl.remove(object);"
+                      modal-id="'alertRemovalModal'"
                       extra="ctrl.extra" order-by="'name'">
           </terrama2-table>
           <div style="clear: both;"></div>
@@ -50,6 +51,7 @@
                       icon-properties="ctrl.iconProperties"
                       link-to-add="ctrl.legendLinkToAdd"
                       remove="ctrl.removeLegend(object);"
+                      modal-id="'legendRemovalModal'"
                       extra="ctrl.legendExtra" order-by="'name'">
           </terrama2-table>
           <div style="clear: both;"></div>
