--- a/webapp/views/configuration/legend.html
+++ b/webapp/views/configuration/legend.html
@@ -52,22 +52,24 @@
             </div>
           </div>
           <div class="col-md-12">
-            <span ng-repeat="level in ctrl.legend.levels">
-              <div class="col-md-6">
-                <div class="form-group" ng-class="{'has-error': ctrl.legendLevelNameError[level._id]}">
-                  <label><span ng-bind="i18n.__('Level Name')"></span>:</label>
-                  <input class="form-control" name="levelName{{ level._id }}" ng-model="level.name" type="text" placeholder="{{ i18n.__('Level Name') }}">
+            <span ng-repeat="level in ctrl.legend.levels track by $index">
+              <div class="col-md-12 row">
+                <div class="col-md-6">
+                  <div class="form-group" ng-class="{'has-error': ctrl.legendLevelNameError[level._id]}">
+                    <label><span ng-bind="i18n.__('Level Name')"></span>:</label>
+                    <input class="form-control" name="levelName{{ level._id }}" ng-model="level.name" type="text" placeholder="{{ i18n.__('Level Name') }}">
+                  </div>
                 </div>
-              </div>
-              <div ng-class="{ 'col-md-5': ctrl.legend.levels.length > 1, 'col-md-6': ctrl.legend.levels.length === 1 }">
-                <div class="form-group" ng-class="{'has-error': ctrl.legendLevelValueError[level._id] || ctrl.legendLevelOrderError}">
-                  <label><span ng-bind="i18n.__('Legend Value')"></span>:</label>
-                  <input class="form-control" name="levelValue{{ level._id }}" ng-model="level.value" type="number" placeholder="{{ i18n.__('Legend Value') }}">
+                <div class="col-md-5">
+                  <div ng-show="!level.isDefault" class="form-group" ng-class="{'has-error': ctrl.legendLevelValueError[level._id] || ctrl.legendLevelOrderError}">
+                    <label><span ng-bind="i18n.__('Legend Value')"></span>:</label>
+                    <input class="form-control" name="levelValue{{ level._id }}" ng-model="level.value" type="number" placeholder="{{ i18n.__('Legend Value') }}">
+                  </div>
                 </div>
-              </div>
-              <div class="col-md-1">
-                <div class="form-group">
-                  <button type="button" class="btn btn-primary" ng-click="ctrl.removeLevel(level)" style="margin-top: 25px;" ng-show="ctrl.legend.levels.length > 1"><span ng-bind="i18n.__('Remove')"></span></button>
+                <div class="col-md-1">
+                  <div ng-show="!level.isDefault" class="form-group">
+                    <button type="button" class="btn btn-primary" ng-click="ctrl.removeLevel(level)" style="margin-top: 25px;" ng-show="ctrl.legend.levels.length > 1"><span ng-bind="i18n.__('Remove')"></span></button>
+                  </div>
                 </div>
               </div>
             </span>
