--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -5,6 +5,7 @@
 {% block styles %}
 
 <link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}jquery-ui/themes/base/jquery-ui.css">
+<link rel="stylesheet" type="text/css" href="{[ BASE_URL ]}datatables/media/css/dataTables.bootstrap.css">
 
 
 {% endblock %}
@@ -42,30 +43,11 @@
                 <option>Teste:123</option>
                 <option>Teste:123</option>
             </select>
+            <button id="generatetable">lala</button>
             <br/>
-            <table class="table table-bordered table-striped">
-                <tbody>
-                    <tr>
-                        <th style="width: 10px">#</th>
-                        <th>Task</th>
-                        <th>Progress</th>
-                        <th style="width: 40px">Label</th>
-                    </tr>
-                    <tr>
-                        <td>1.</td>
-                        <td>Update software</td>
-                        <td>lala</td>
-                        <td><span class="badge bg-red">55%</span></td>
-                    </tr>
-                </tbody>
-            </table>
-            <ul class="pagination pagination-sm no-margin pull-right">
-                <li><a href="#">«</a></li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">»</a></li>
-            </ul>
+            <div id="attributes-table-div">
+                <table class="table table-bordered table-hover" id="attributes-table"></table>
+            </div>
         </div>
     </div>
 </div>
@@ -112,7 +94,65 @@
 <script src="{[ BASE_URL ]}javascripts/utils/capabilities.js"></script>
 <script src="{[ BASE_URL ]}javascripts/utils/calendar.js"></script>
 <script src="{[ BASE_URL ]}javascripts/utils/slider.js"></script>
+<script src="{[ BASE_URL ]}datatables/media/js/jquery.dataTables.min.js"></script>
+<script src="{[ BASE_URL ]}datatables/media/js/dataTables.bootstrap.min.js"></script>
 <script>
+    var BASE_URL = "{[ BASE_URL ]}";
+    $('#generatetable').on('click', function() {
+        if($('#getAttributes > select').val() !== null) {
+            $.get(BASE_URL + 'get-columns',
+                {
+                    layer: $('#getAttributes > select').val()
+                },
+                function(response) {
+                    var columns = response.fields;
+                    var columnsLength = columns.length;
+                    var columnsArray = [];
+                    var titles = "";
+
+                    for(var i = 0; i < columnsLength; i++) {
+                        columnsArray.push({ "name": columns[i] });
+                        titles += "<th>" + columns[i] + "</th>";
+                    }
+
+                    $("#attributes-table-div").empty().html("<table class=\"table table-bordered table-hover\" id=\"attributes-table\"><thead>" + titles + "</thead><tfoot>" + titles + "</tfoot></table>");
+
+                    $('#attributes-table').DataTable({
+                        "processing": true,
+                        "serverSide": true,
+                        "ajax": {
+                            "url": BASE_URL + "get-attributes-table",
+                            "type": "POST",
+                            "data": function(data) {
+                                data.layer = $('#getAttributes > select').val();
+                            }
+                        },
+                        "columns": columnsArray,
+                        "language": {
+                        "emptyTable": "<p class='text-center'>Nenhum registro a ser exibido</p>",
+                        "info": "Exibindo _START_ at&eacute; _END_ de _TOTAL_ registros",
+                        "infoEmpty": "Exibindo 0 at&eacute; 0 de 0 registros",
+                        "infoFiltered": "(filtrado de _MAX_ registros)",
+                        "lengthMenu": "Exibir _MENU_ registros",
+                        "loadingRecords": "Carregando...",
+                        "processing": "Processando...",
+                        "search": "Pesquisa:",
+                        "zeroRecords": "<p class='text-center'>Nenhum registro encontrado</p>",
+                        "paginate": {
+                            "first": "Primeira",
+                            "last": "&Uacute;ltima",
+                            "next": "Pr&oacute;xima",
+                            "previous": "Anterior"
+                        }
+                        }
+                    });
+                }
+            );
+        } else {
+            $("#attributes-table-div").empty().html("<table class=\"table table-bordered table-hover\" id=\"attributes-table\"><thead><td></td></thead><tbody>Nenhum registro encontrado</tbody><tfoot><td></td></tfoot></table>");
+        }
+    });
+
     var webadminHostInfo = {[webadminHostInfo|json|safe]};
     var webmonitorHostInfo = {[webmonitorHostInfo|json|safe]};
     var allLayers = [];
