--- a/webmonitor/public/stylesheets/style.css
+++ b/webmonitor/public/stylesheets/style.css
@@ -459,7 +459,9 @@
 
 #moveMap { top: 92px; }
 
-#getAttributes { top: 134px; }
+#tableButton { top: 134px; }
+
+#getAttributes { top: 176px; }
 
 #getAttributes.with-select { width: 190px; }
 
@@ -493,7 +495,6 @@
   position: absolute;
   background-color: rgba(255,255,255,0.6);
   width: 100%;
-  height: 400px;
   bottom: 0;
   z-index: 9999;
 }
