--- a/webmonitor/views/index.html
+++ b/webmonitor/views/index.html
@@ -30,21 +30,19 @@
 <div id="terrama2-map" class="terrama2-map cursor-move">
     <div id="map-tools">
         <div id="moveMap" class="map-tool-button mouse-function-btn active"><button type="button"><i class="fa fa-hand-rock-o"></i></button></div>
-        <div id="getAttributes" class="map-tool-button mouse-function-btn">
+        <div id="tableButton" class="map-tool-button mouse-function-btn hidden"><button type="button"><i class="fa fa-table"></i></button></div>
+        <div id="getAttributes" class="map-tool-button mouse-function-btn hidden">
             <select class="form-control hidden"></select>
             <button type="button"><i class="fa fa-info"></i></button>
         </div>
     </div>
-    <div id="table-div">
+    <div id="table-div" style="height: 0px;">
         <div>
-            <span>Layers:</span>
-            <select class="form-control">
-                <option>Teste:123</option>
-                <option>Teste:123</option>
-                <option>Teste:123</option>
-            </select>
-            <button id="generatetable">lala</button>
-            <br/>
+            <div>
+                <span style="float: left;">Layers:</span>
+                <select class="form-control" id="attributes-table-select" style="width: 200px; float: left;"></select>
+            </div>
+            <div style="clear: both; height: 10px;"></div>
             <div id="attributes-table-div">
                 <table class="table table-bordered table-hover" id="attributes-table"></table>
             </div>
@@ -98,58 +96,127 @@
 <script src="{[ BASE_URL ]}datatables/media/js/dataTables.bootstrap.min.js"></script>
 <script>
     var BASE_URL = "{[ BASE_URL ]}";
-    $('#generatetable').on('click', function() {
-        if($('#getAttributes > select').val() !== null) {
-            $.get(BASE_URL + 'get-columns',
-                {
-                    layer: $('#getAttributes > select').val()
-                },
-                function(response) {
-                    var columns = response.fields;
-                    var columnsLength = columns.length;
-                    var columnsArray = [];
-                    var titles = "";
 
-                    for(var i = 0; i < columnsLength; i++) {
-                        columnsArray.push({ "name": columns[i] });
-                        titles += "<th>" + columns[i] + "</th>";
-                    }
+    var createTableSelect = function() {
+        var showButton = false;
 
-                    $("#attributes-table-div").empty().html("<table class=\"table table-bordered table-hover\" id=\"attributes-table\"><thead>" + titles + "</thead><tfoot>" + titles + "</tfoot></table>");
+        for(var i = 0, visibleLayersLength = visibleLayers.length; i < visibleLayersLength; i++) {
+            var layerId = $('#' + visibleLayers[i]).data('layerid');
+            var layerName = TerraMA2WebComponents.MapDisplay.getLayerProperty(layerId, "layerName");
+            var layerType = TerraMA2WebComponents.MapDisplay.getLayerProperty(layerId, "layerType");
 
-                    $('#attributes-table').DataTable({
-                        "processing": true,
-                        "serverSide": true,
-                        "ajax": {
-                            "url": BASE_URL + "get-attributes-table",
-                            "type": "POST",
-                            "data": function(data) {
-                                data.layer = $('#getAttributes > select').val();
-                            }
-                        },
-                        "columns": columnsArray,
-                        "language": {
-                        "emptyTable": "<p class='text-center'>Nenhum registro a ser exibido</p>",
-                        "info": "Exibindo _START_ at&eacute; _END_ de _TOTAL_ registros",
-                        "infoEmpty": "Exibindo 0 at&eacute; 0 de 0 registros",
-                        "infoFiltered": "(filtrado de _MAX_ registros)",
-                        "lengthMenu": "Exibir _MENU_ registros",
-                        "loadingRecords": "Carregando...",
-                        "processing": "Processando...",
-                        "search": "Pesquisa:",
-                        "zeroRecords": "<p class='text-center'>Nenhum registro encontrado</p>",
-                        "paginate": {
-                            "first": "Primeira",
-                            "last": "&Uacute;ltima",
-                            "next": "Pr&oacute;xima",
-                            "previous": "Anterior"
-                        }
-                        }
-                    });
-                }
-            );
+            if(layerType !== "template" && layerType !== "custom") {
+                $('#attributes-table-select').append($('<option></option>').attr('value', layerId).text(layerName));
+                if(!showButton) showButton = true;
+            }
+        }
+
+        if(!showButton) {
+            $("#attributes-table-div").empty();
+            $("#table-div").css('height', '0px');
+
+            if(!$('#tableButton').hasClass('hidden'))
+                $('#tableButton').addClass('hidden');
+
+            resetMapMouseTools();
+            activateMoveMapTool();
         } else {
-            $("#attributes-table-div").empty().html("<table class=\"table table-bordered table-hover\" id=\"attributes-table\"><thead><td></td></thead><tbody>Nenhum registro encontrado</tbody><tfoot><td></td></tfoot></table>");
+            $('#tableButton').removeClass('hidden');
+        }
+    };
+
+    var setAttributesTable = function() {
+        if($('#attributes-table-select').val() !== null) {
+            var layerId = null;
+            var geoserverUri = null;
+
+            for(var i = 0, allLayersLength = allLayers.length; i < allLayersLength; i++) {
+                if($('#attributes-table-select').val() === allLayers[i].id) {
+                    layerId = allLayers[i].id;
+                    geoserverUri = allLayers[i].url;
+                    break;
+                }
+            }
+
+            if(layerId !== null && geoserverUri !== null) {
+                if($("#tableButton").hasClass('hidden'))
+                    $("#tableButton").removeClass('hidden');
+
+                $.get(BASE_URL + 'get-columns',
+                    {
+                        layer: layerId,
+                        geoserverUri: geoserverUri
+                    },
+                    function(response) {
+                        var columns = response.fields;
+                        var columnsLength = columns.length;
+                        var columnsArray = [];
+                        var titles = "";
+
+                        for(var i = 0; i < columnsLength; i++) {
+                            columnsArray.push({ "name": columns[i].name });
+                            titles += "<th>" + columns[i].name + "</th>";
+                        }
+
+                        $("#attributes-table-div").empty().html("<table class=\"table table-bordered table-hover\" id=\"attributes-table\"><thead>" + titles + "</thead><tfoot>" + titles + "</tfoot></table>");
+
+                        $('#attributes-table').DataTable({
+                            "order": [[0, "asc"]],
+                            "processing": true,
+                            "serverSide": true,
+                            "ajax": {
+                                "url": BASE_URL + "get-attributes-table",
+                                "type": "POST",
+                                "data": function(data) {
+                                    data.layer = $('#attributes-table-select').val();
+                                    data.geoserverUri = geoserverUri;
+                                }
+                            },
+                            "columns": columnsArray,
+                            "language": {
+                                "emptyTable": "<p class='text-center'>Nenhum registro a ser exibido</p>",
+                                "info": "Exibindo _START_ at&eacute; _END_ de _TOTAL_ registros",
+                                "infoEmpty": "Exibindo 0 at&eacute; 0 de 0 registros",
+                                "infoFiltered": "(filtrado de _MAX_ registros)",
+                                "lengthMenu": "Exibir _MENU_ registros",
+                                "loadingRecords": "Carregando...",
+                                "processing": "Processando...",
+                                "search": "Pesquisa:",
+                                "zeroRecords": "<p class='text-center'>Nenhum registro encontrado</p>",
+                                "paginate": {
+                                    "first": "Primeira",
+                                    "last": "&Uacute;ltima",
+                                    "next": "Pr&oacute;xima",
+                                    "previous": "Anterior"
+                                }
+                            }
+                        });
+                    }
+                );
+            } else {
+                $("#attributes-table-div").empty();
+                $("#table-div").css('height', '0px');
+
+                if(!$("#tableButton").hasClass('hidden'))
+                    $("#tableButton").addClass('hidden');
+            }
+        } else {
+            $("#attributes-table-div").empty();
+            $("#table-div").css('height', '0px');
+
+            if(!$("#tableButton").hasClass('hidden'))
+                $("#tableButton").addClass('hidden');
+        }
+    };
+
+    $('#attributes-table-select').on('change', setAttributesTable);
+
+    $('#tableButton > button').on('click', function() {
+        if($('#table-div').css('height') === '0px') {
+            $('#table-div').css('height', '400px');
+            setAttributesTable();
+        } else {
+            $('#table-div').css('height', '0px');
         }
     });
 
@@ -826,6 +893,7 @@
             visibleLayers.push(layerid);
         }
         setGetFeatureInfoToolSelect();
+        createTableSelect();
         var imageElement = $(this).closest('li').find("#image-icon");
         if (imageElement.attr("src") == "{[ BASE_URL ]}images/status/yellow-black.gif"){
             TerraMA2WebComponents.MapDisplay.updateLayerSourceParams(completeLayerId, {"": Date.now().toString()}, true);
